--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,112 +1,113 @@
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 /* HEADER STYLES */
 
 header {
-  margin: 0;
+	margin: 0;
 }
 
 #Banner1 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 40px;
-  padding: 20px;
-  background-color: #164e70;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 40px;
+	padding: 20px;
+	background-color: #164e70;
 }
 
 #Banner1 img {
-  max-width: 150px;
-  width: auto;
-  height: auto;
-  box-shadow: 0 0 90px 10px;
+	max-width: 150px;
+	width: auto;
+	height: auto;
+	box-shadow: 0 0 90px 10px;
 }
 
 #Banner1 h1 {
-  font-size: 50px;
-  color: white;
+	font-size: 50px;
+	color: white;
 }
 
 #PrimaryNav {
-  background-color: black;
+	background-color: black;
 }
 
 #PrimaryNav ul {
-  display: flex;
-  justify-content: space-around;
-  margin: 0;
-  padding: 20px;
-  list-style-type: none;
+	display: flex;
+	justify-content: space-around;
+	margin: 0;
+	padding: 20px;
+	list-style-type: none;
 }
 
 #PrimaryNav li a {
-  text-decoration: none;
-  color: white;
-  font-size: 24px;
-  padding: 15px 30px; /* Add horizontal padding for better spacing */
+	text-decoration: none;
+	color: white;
+	font-size: 24px;
+	padding: 15px 30px;
+	/* Add horizontal padding for better spacing */
 }
 
 
 #PrimaryNav li a:hover {
-  color: #164E70;
-  cursor: pointer;
+	color: #164E70;
+	cursor: pointer;
 }
 
 .navigation li a.active {
-  border: 2px solid white;
-  border-radius: 20px;
+	border: 2px solid white;
+	border-radius: 20px;
 }
 
 #Hamburger {
-  display: none;
-  background: none;
-  color: white;
-  border: none;
-  font-size: 30px;
+	display: none;
+	background: none;
+	color: white;
+	border: none;
+	font-size: 30px;
 }
 
 .hamburger {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin: 20px;
-  display: inline-flex;
-  flex-direction: column;
-  cursor: pointer;
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin: 20px;
+	display: inline-flex;
+	flex-direction: column;
+	cursor: pointer;
 }
 
 .hamburger::before {
-  content: "☰";
-  padding: 5px;
+	content: "☰";
+	padding: 5px;
 }
 
 .hamburger.active::before {
-  content: "❎";
-  border: none;
-  padding: 5px;
+	content: "❎";
+	border: none;
+	padding: 5px;
 }
 
 .navigation.active {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  /* top: 60px; */
-  right: 0;
-  /* width: 100%; */
-  background-color: black;
-  text-align: center;
+	display: flex;
+	flex-direction: column;
+	position: absolute;
+	/* top: 60px; */
+	right: 0;
+	/* width: 100%; */
+	background-color: black;
+	text-align: center;
 }
 
 .navigation li {
-  padding: 15px;
+	padding: 15px;
 }
 
 /* END OF BANNER STYLES */
@@ -126,228 +127,256 @@ header {
 } */
 
 .card1 {
-  float: left;
-  min-width: 60%;
-  /* padding: 0 10px; */
+	float: left;
+	min-width: 60%;
+	/* padding: 0 10px; */
 }
 
 .card2 {
-  float: left;
-  min-width: 30%;
-  /* padding: 0 10px; */
+	float: left;
+	min-width: 30%;
+	/* padding: 0 10px; */
 }
 
 .section {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  text-align: center;
-  background-color: white;
-  padding-bottom: 25px;
-  border-radius: 10px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	text-align: center;
+	background-color: white;
+	padding-bottom: 25px;
+	border-radius: 10px;
 }
 
 .section h2 {
-  background-color: #164e70;
-  color: white;
-  padding: 25px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  font-size: 24px;
+	background-color: #164e70;
+	color: white;
+	padding: 25px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	font-size: 24px;
 }
 
 figure img {
-  max-width: 250px;
+	max-width: 250px;
 }
 
 .section.certificate {
-  width: calc(90% + 20px);
-  margin: auto;
+	width: calc(90% + 20px);
+	margin: auto;
 }
 
 .section.certificate h2 {
-  max-width: 100%;
+	max-width: 100%;
 }
 
 .grid__container {
-  display: grid;
-  grid-template-columns: 60% 30%;
-  grid-template-rows: auto;
-  justify-content: center;
-  gap: 30px;
-  margin-top: 30px;
-  margin-bottom: 30px;
+	display: grid;
+	grid-template-columns: 60% 30%;
+	grid-template-rows: auto;
+	justify-content: center;
+	gap: 30px;
+	margin-top: 30px;
+	margin-bottom: 30px;
 }
 
 .card1 {
-  grid-column: 1/2;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+	grid-column: 1/2;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
 .card1 h2,
 .card2 h2,
 .card3 h2 {
-  background-color: #164e70;
-  margin-top: 0;
-  padding: 20px;
-  color: white;
-  text-align: center;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  font-size: calc(1vw + 7px);
+	background-color: #164e70;
+	margin-top: 0;
+	padding: 20px;
+	color: white;
+	text-align: center;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	font-size: calc(1vw + 7px);
 }
 
 .card2 {
-  grid-column: 2/3;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  text-align: center;
+	grid-column: 2/3;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	text-align: center;
 }
 
 .card2 figure img {
-  margin-bottom: 15px;
-  width: 100%;
-  height: auto;
+	margin-bottom: 15px;
+	width: 100%;
+	height: auto;
 }
 
 .card2 figcaption {
-  margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 .card3 {
-  grid-column: 1/3;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+	grid-column: 1/3;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
 .small__nav ul {
-  display: flex;
-  gap: 50px;
-  justify-content: center;
-  list-style-type: none;
-  padding: 0;
+	display: flex;
+	gap: 50px;
+	justify-content: center;
+	list-style-type: none;
+	padding: 0;
 }
 
 .small__nav ul li {
-  text-decoration: none;
-  list-style-type: none;
-  cursor: pointer;
-  background-color: black;
-  color: white;
-  padding: 5px 40px;
-  border-radius: 5px;
+	text-decoration: none;
+	list-style-type: none;
+	cursor: pointer;
+	background-color: black;
+	color: white;
+	padding: 5px 40px;
+	border-radius: 5px;
 
 }
 
 .small__nav .courses {
-  display: flex;
-  gap: 50px;
-  padding: 2rem;
-  justify-content: space-around;
-  flex-wrap: wrap;
+	display: flex;
+	gap: 50px;
+	padding: 2rem;
+	justify-content: space-around;
+	flex-wrap: wrap;
 }
 
 .course {
-  border: 1px solid black;
-  padding: 5px 40px;
-  border-radius: 5px;
+	border: 1px solid black;
+	padding: 5px 40px;
+	border-radius: 5px;
+	cursor: pointer;
 }
 
 .sub__nav__selected {
-  background-color: #164e70 !important;
-  color: white;
+	background-color: #164e70 !important;
+	color: white;
 }
 
 .completed {
-  background-color: #4d1c07;
-  color: white;
+	background-color: #4d1c07;
+	color: white;
 }
 
-/* .courses {
-  display: flex;
-  gap: 20px;
-} */
+/* DIALOG STYLES */
+
+#course-details {
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: .25rem;
+	padding: 1rem;
+	background-color: #fff;
+	box-shadow: 0 0 3rem #777;
+	width: 90%;
+	max-width: 600px;
+}
+
+#course-details img {
+	width: 20px;
+	display: flex;
+	cursor: pointer;
+}
+
+::backdrop {
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+dialog button {
+	position: absolute;
+	top: 23px;
+	right: 23px;
+	padding: .5rem 1rem;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+/* END OF DIALOG STYLES */
 
 /* FOOTER STYLES */
 
 footer {
-  text-align: center;
-  background-color: #164e70;
-  padding: 20px;
-  color: white;
+	text-align: center;
+	background-color: #164e70;
+	padding: 20px;
+	color: white;
 }
 
 #lastModified {
-  color: yellow;
+	color: yellow;
 }
 
 /* MEDIA QUERIES */
 
 @media (max-width: 768px) {
-  #Banner1 h1 {
-    font-size: 25px;
-  }
+	#Banner1 h1 {
+		font-size: 25px;
+	}
 
-  #PrimaryNav .navigation {
-    display: none;
-  }
+	#PrimaryNav .navigation {
+		display: none;
+	}
 
-  #Hamburger {
-    display: flex;
-  }
+	#Hamburger {
+		display: flex;
+	}
 
-  #PrimaryNav ul {
-    flex-direction: column;
-    gap: 0;
-  }
+	#PrimaryNav ul {
+		flex-direction: column;
+		gap: 0;
+	}
 
-  #PrimaryNav .navigation.active {
-    display: flex;
-  }
+	#PrimaryNav .navigation.active {
+		display: flex;
+	}
 
-  #PrimaryNav li {
-    padding: 15px;
-  }
+	#PrimaryNav li {
+		padding: 15px;
+	}
 
-  #PrimaryNav li a {
-    font-size: 18px;
-  }
+	#PrimaryNav li a {
+		font-size: 18px;
+	}
 
-  .grid__container {
-    display: flex;
-    flex-direction: column;
-    margin: 40px;
-  }
+	.grid__container {
+		display: flex;
+		flex-direction: column;
+		margin: 40px;
+	}
 
-  .card1 h2,
-  .card2 h2,
-  .card3 h2 {
-    font-size: 15px;
-  }
+	.card1 h2,
+	.card2 h2,
+	.card3 h2 {
+		font-size: 15px;
+	}
 
-  .small__nav ul {
-    justify-content: space-around;
-    row-gap: 15px;
-    column-gap: 50px;
-    flex-wrap: wrap;
-    gap: 0;
-  }
+	.small__nav ul {
+		justify-content: space-around;
+		row-gap: 15px;
+		column-gap: 50px;
+		flex-wrap: wrap;
+		gap: 0;
+	}
 
-  .small__nav ul li {
-    padding: 10px 30px;
-  }
+	.small__nav ul li {
+		padding: 10px 30px;
+	}
 
-  .courses {
-    gap: 10px !important;
-  }
+	.courses {
+		gap: 10px !important;
+	}
 
-  .course {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
+	.course {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+	}
 }
 
 /* @media (max-width: 530px) {
