--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -596,6 +596,8 @@ footer p {
 #joinMain {
     display: flex;
     justify-content: space-between;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 #form {
